Fixed issue with extra margin

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ a:hover{
 
 .main-links li{
 	display: inline-block;
-	margin-left: 20px;
+	margin-right: 20px;
 	margin-top: 15px;
 }
 
@@ -201,7 +201,7 @@ a:hover{
 	margin-top: 10px;
 	vertical-align: top;
 	box-shadow: 10px 10px 0 #000;
-	margin-left: 20px;
+	margin-right 20px;
 	margin-top: 20px;
 }
 
@@ -223,7 +223,7 @@ a:hover{
 	margin-top: 10px;
 	vertical-align: top;
 	box-shadow: 10px 10px 0 #000;
-	margin-left: 20px;
+	margin-right: 20px;
 	margin-top: 20px;
 }
 
@@ -253,7 +253,7 @@ a:hover{
 	font-size: 18px;
 	height: 55px;
 	line-height: 50px;
-	margin-left: 20px;
+	margin-right: 20px;
 	margin-top: 20px;
 	width: 280px;
 }
